# aws-monitor

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  cache.py  config.py  database.py  dependencies.py  main.py
backend/app/api/routes/: accounts.py  actions.py  audit.py  auth.py  cost.py  health.py  resources.py
backend/app/models/: __init__.py  database.py  enums.py  schemas.py
backend/app/services/: audit.py  auth.py  safety.py
backend/app/services/aws/: __init__.py  aggregator.py  base.py  cost_explorer.py  ec2.py  ecs.py  lambda_.py  rds.py  s3.py
backend/tests/: conftest.py
backend/tests/integration/: test_accounts.py  test_actions.py  test_audit.py  test_auth.py  test_cost.py  test_health.py  test_resources.py
backend/tests/unit/: test_config.py  test_safety.py
docs/audit/: audit-logging-audit-2026-01-31.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: Audit.tsx  Costs.tsx  Dashboard.tsx  Inventory.tsx  Login.tsx  Recommendations.tsx  Settings.tsx
frontend/src/services/: api.ts  audit.ts  auth.ts  costs.ts  index.ts  resources.ts
frontend/src/store/: authSlice.ts  index.ts  uiSlice.ts
frontend/src/types/: api.ts  costs.ts  (+2 more)
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+28 files in other folders)
